discord-frontend/hartex-discord-commands-test/tests/ui/parameter_expected.stderr
error: expected parameter; found none
  --> tests/ui/parameter_expected.rs:26:11
   |
26 | #[metadata()]
   |           ^^
